force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__AAR__c.field-meta.xml
<CustomField>
    <fullName>agf__AAR__c</fullName>
    <label>AAR #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>