force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__AAR_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>agf__AAR_Record_Link__c</fullName>
    <label>AAR Record Link</label>
    <type>Url</type>
</CustomField>