force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>agf__Action_Plan__c</fullName>
    <label>Action Plan in Scrumforce</label>
    <type>Url</type>
</CustomField>