force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Action_Plan_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Action_Plan_Completion_Date__c</fullName>
    <label>Action Plan Completion Date</label>
    <type>Date</type>
</CustomField>