force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Action_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>agf__Action_Plan_Summary__c</fullName>
    <label>Action Plan Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>