force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Bug__c.field-meta.xml
<CustomField>
    <fullName>agf__Bug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bug</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Root Cause Analysis</relationshipLabel>
    <relationshipName>RCA_Bug</relationshipName>
    <type>Lookup</type>
</CustomField>