force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>