force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Duration__c.field-meta.xml
<CustomField>
    <fullName>agf__Duration__c</fullName>
    <label>Duration</label>
    <length>15</length>
    <type>Text</type>
</CustomField>