force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Estimated_Delivery__c.field-meta.xml
<CustomField>
    <fullName>agf__Estimated_Delivery__c</fullName>
    <inlineHelpText>Message Owners: Use this field to update Support on the ETA for the RCM/Issue Message if you are still investigating and will not have the message within the 5 business day SLA.  Flip &quot;Message Status&quot; to &quot;Under Investigation&quot;</inlineHelpText>
    <label>Estimated Delivery</label>
    <type>Date</type>
</CustomField>