force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Incident_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>agf__Incident_Start_Time__c</fullName>
    <label>Incident Start Time</label>
    <type>DateTime</type>
</CustomField>