force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Messaging_Owner__c.field-meta.xml
<CustomField>
    <fullName>agf__Messaging_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to identify messaging owner. OSC for RCA + RCM service incidents, Product Manager for RCA + RCM or Issue Message for product incidents.</description>
    <inlineHelpText>Field to identify messaging owner. OSC for RCA + RCM service incidents, Product Manager for RCA + RCM or Issue Message for product incidents.</inlineHelpText>
    <label>Messaging Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mess_Root_Cause_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>