force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__RCA_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__RCA_Completed_Date__c</fullName>
    <inlineHelpText>Date when the RCA owner finishes filling in the details.</inlineHelpText>
    <label>RCA Completed Date</label>
    <type>Date</type>
</CustomField>