force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__RCA_Incident_Summary__c.field-meta.xml
<CustomField>
    <fullName>agf__RCA_Incident_Summary__c</fullName>
    <description>Brief summary of what occurred.</description>
    <inlineHelpText>Brief summary of what occurred.</inlineHelpText>
    <label>RCA Incident Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>