force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__RCA_Invitees__c.field-meta.xml
<CustomField>
    <fullName>agf__RCA_Invitees__c</fullName>
    <label>RCA Invitees</label>
    <type>TextArea</type>
</CustomField>