force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__RCA_Participants__c.field-meta.xml
<CustomField>
    <fullName>agf__RCA_Participants__c</fullName>
    <label>RCA Participants</label>
    <type>TextArea</type>
</CustomField>