force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__RCA_Review_Forum__c.field-meta.xml
<CustomField>
    <fullName>agf__RCA_Review_Forum__c</fullName>
    <label>RCA Review Forum</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applications Review</fullName>
            </value>
            <value>
                <fullName>Analytics Big Data Review</fullName>
            </value>
            <value>
                <fullName>Automation Review</fullName>
            </value>
            <value>
                <fullName>Core Review</fullName>
            </value>
            <value>
                <fullName>data.com Review</fullName>
            </value>
            <value>
                <fullName>HA Review</fullName>
            </value>
            <value>
                <fullName>Internal HA Review</fullName>
            </value>
            <value>
                <fullName>IT Review</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Platform Review</fullName>
            </value>
            <value>
                <fullName>work.com Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>