force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__RCA_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__RCA_Type__c</fullName>
    <inlineHelpText>5 value options are presented here to allow the owner to categorize the release at a high level.</inlineHelpText>
    <label>RCA Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-Release/Break-Fix Request</fullName>
            </value>
            <value>
                <fullName>Deployment Delayed</fullName>
            </value>
            <value>
                <fullName>Rollback</fullName>
            </value>
            <value>
                <fullName>Incorrect/Incomplete Code Release</fullName>
            </value>
            <value>
                <fullName>Incorrect/Incomplete Deployment</fullName>
            </value>
            <value>
                <fullName>Performance Degradation</fullName>
            </value>
            <value>
                <fullName>Service Degradation</fullName>
            </value>
            <value>
                <fullName>Service Disruption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>