force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__RCM_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__RCM_Type__c</fullName>
    <inlineHelpText>Use this field to denote if the RCM or Issue Message request was verbal or written. If the customer did not specify, the message should always be delivered verbally.</inlineHelpText>
    <label>Message Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verbal</fullName>
                <default>true</default>
                <label>Verbal</label>
            </value>
            <value>
                <fullName>Written</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>