force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Gives the team the ability to tie the RCA records to specific releases in GUS to gather valuable metrics over time.</inlineHelpText>
    <label>Release</label>
    <referenceTo>agf__ADM_Release__c</referenceTo>
    <relationshipLabel>Root Cause Analysis</relationshipLabel>
    <relationshipName>RCA_Release</relationshipName>
    <type>Lookup</type>
</CustomField>