force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Request_Details__c.field-meta.xml
<CustomField>
    <fullName>agf__Request_Details__c</fullName>
    <defaultValue>&quot;Please include the Account Name, Contact Name &amp; Case Number of the messaging request.&quot;</defaultValue>
    <inlineHelpText>Please include the Account and Contact names, Case Number, and any other details related to this request</inlineHelpText>
    <label>Request Details</label>
    <type>TextArea</type>
</CustomField>