force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Review_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Review_Date__c</fullName>
    <inlineHelpText>Indicates when a particular RCA is reviewed in a given management meeting.</inlineHelpText>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>