force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Root_Cause_Messaging__c.field-meta.xml
<CustomField>
    <fullName>agf__Root_Cause_Messaging__c</fullName>
    <defaultValue>&quot;Messaging Templates: https://sites.google.com/a/salesforce.com/release-operations-program-management/Home/release-processes/whats-on-the-release-operations-backlog/root-cause-analysis-process&quot;</defaultValue>
    <description>This field is used to record the customer facing messaging pertaining to a given incident.  The messaging falls under two different categories, &quot;Product&quot; &amp; &quot;Service&quot; related.  There is a template for each that can be found here: https://sites.google.com/a/salesforce.com/release-operations-program-management/Home/release-processes/whats-on-the-release-operations-backlog/root-cause-analysis-process.</description>
    <inlineHelpText>This field is in the process of being EOL&apos;d. Please attach the RCM to the appropriate RCA record.</inlineHelpText>
    <label>Root Cause Messaging</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>