force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Subject__c.field-meta.xml
<CustomField>
    <fullName>agf__Subject__c</fullName>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>