force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__Timeline_of_Events__c.field-meta.xml
<CustomField>
    <fullName>agf__Timeline_of_Events__c</fullName>
    <label>Timeline of Events</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>