force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/fields/agf__What_was_the_resolution__c.field-meta.xml
<CustomField>
    <fullName>agf__What_was_the_resolution__c</fullName>
    <inlineHelpText>This is a fairly straightforward question that asks the owner to detail how exactly the incident was resolved.</inlineHelpText>
    <label>What was the resolution?</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>