force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/recordTypes/agf__RCA_Only.recordType-meta.xml
<RecordType>
    <fullName>agf__RCA_Only</fullName>
    <active>true</active>
    <description>Choose this record type if this is a request only for a Root Cause Analysis (no messaging request).</description>
    <label>RCA Only</label>
</RecordType>