force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/recordTypes/agf__RCA_RCM_Request.recordType-meta.xml
<RecordType>
    <fullName>agf__RCA_RCM_Request</fullName>
    <active>true</active>
    <description>Choose this record type if a customer has requested an RCM and this meets the criteria for an RCA</description>
    <label>RCA/RCM Request</label>
</RecordType>