force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__RCA__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>NAME</columns>
    <columns>agf__RCA_Status__c</columns>
    <columns>agf__Scrum_Team__c</columns>
    <columns>agf__Assignee__c</columns>
    <columns>agf__Root_Cause_Category__c</columns>
    <columns>agf__Release__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>